syntax = "proto3";

service PaxosService {
  rpc PaxosPhaseOne(Prepare) returns (Promise);
  rpc PaxosPhaseTwo(Accept) returns (Accepted);
}

message Prepare {
  int32 IDp = 1;
}

message Promise {
  int32 IDp = 1;
  int32 IDa = 2;
  repeated Lease value = 3;
}

message Accept {
  int32 IDp = 1;
  repeated Lease value = 2;
}

message Accepted {
  int32 IDp = 1;
  repeated Lease value = 2;
}

message Lease {
  repeated string value = 1;
}
